<resources>
    <string name="app_name">News Feed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Create an new account</string>

    <!-- Api Strings -->
    <string name="host_api">https://esgi-2017.herokuapp.com/</string>
    <string name="api_authenticate">auth/login</string>
    <string name="api_subscribe">auth/subscribe</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First Name</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="example_text">Post haec indumentum regale quaerebatur et ministris fucandae purpurae tortis confessisque pectoralem tuniculam sine manicis textam, Maras nomine quidam inductus est ut appellant Christiani diaconus, cuius prolatae litterae scriptae Graeco sermone ad Tyrii textrini praepositum celerari speciem perurgebant quam autem non indicabant denique etiam idem ad usque discrimen vitae vexatus nihil fateri conpulsus est.  Quanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani, quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos aut inter paucos iungeretur.  Montius nos tumore inusitato quodam et novo ut rebellis et maiestati recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem formidine tenus iusserim custodiri.  Sed cautela nimia in peiores haeserat plagas, ut narrabimus postea, aemulis consarcinantibus insidias graves apud Constantium, cetera medium principem sed siquid auribus eius huius modi quivis infudisset ignotus, acerbum et inplacabilem et in hoc causarum titulo dissimilem sui.  Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec ratione habent cognitam, disputabunt. Nam quis est, pro deorum fidem atque hominum! qui velit, ut neque diligat quemquam nec ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere? Haec enim est tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia, omnia semper suspecta atque sollicita, nullus locus amicitiae.</string>
    <string name="example_middle_text">Post haec indumentum regale quaerebatur et ministris fucandae purpurae tortis confessisque pectoralem tuniculam sine manicis textam.</string>
    <string name="your_account">Votre compte</string>

    <!-- Menu Strings -->
    <string name="news">News</string>
    <string name="topics">Topics</string>
    <string name="home">Home</string>
    <string name="add_news">Add a news</string>
    <string name="add_topics">Add a Topics</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title">title</string>
    <string name="content">content</string>

</resources>
