<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_regular"
    android:weightSum="1"
    tools:context="fr.esgi.newsfeed.activities.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/nosize"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/big_textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nosize"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eT_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnSize_regular"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/eT_password"/>

        <EditText
            android:id="@+id/eT_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnSize_regular"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textWebPassword"
            android:nextFocusDown="@+id/btn_connexion_login"/>

        <Button
            android:id="@+id/btn_connexion_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnSize_regular"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_subscribe_inLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnSize_regular"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>
