<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_regular"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/nosize"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="INSCRIPTION"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/nosize"
            android:layout_weight="0.60"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSize_regular"
                android:hint="@string/firstname"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/et_lastname"/>

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSize_regular"
                android:hint="@string/lastname"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/et_subscribe_email"/>

            <EditText
                android:id="@+id/et_subscribe_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSize_regular"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/et_subscribe_password"/>

            <EditText
                android:id="@+id/et_subscribe_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSize_regular"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textWebPassword"
                android:nextFocusDown="@+id/btn_subscribe"/>

            <Button
                android:id="@+id/btn_subscribe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSize_regular"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>