<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="@dimen/padding_regular">

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_height_regular"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/title_textSize"
                android:textStyle="bold"
                tools:text="MY NEWS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_news_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/normal_textSize"
                tools:text="@string/example_text" />

            <TextView
                android:id="@+id/tv_news_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                tools:text="Ajouté le 21/06 à 17H32" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/comment_item">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_delete_news"
                android:layout_width="@dimen/nosize"
                android:layout_height="@dimen/btnSize_regular"
                android:layout_weight="0.5"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btn_update_news"
                android:layout_width="@dimen/nosize"
                android:layout_height="@dimen/btnSize_regular"
                android:layout_weight="0.5"
                android:text="@string/update" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>